Changelog
=========


1.2.12 (unreleased)
-------------------

- Responsibles name of a meetingitem is now displayed, even if its a contact.
  [Julian Infanger]


1.2.11 (2012-03-12)
-------------------

- Replaced td with table-label class with th.
  [julian]

- Update German and English translations.
  [jone]

- Implement meeting PDF with `ftw.pdfgenerator`.
  [jone]


1.2.10 (2012-03-05)
-------------------

- Added Ical Attachment adapter.
  [mathias.leimgruber]

- Added drag'n'drop support for meetingitems on meeting view.
  [mathias.leimgruber]

- Improve visual effects on meeting view.
  [jone]

- Added class vertical and listing to the tables.
  [Julian Infanger]

- Added functions to get and edit start and end date like default event.
  These functions are needed in the calendar.
  [Julian Infanger]

- Added new arrow_down/arrow_right icon
  [mathias.leimgruber]


1.2.9 (2011-12-21)
------------------

- Updates in meeting pdf.
  Show logo in pdf. Show location in pdf. Show start date and start time as date.
  Add head of meeting, attendees and recording secretary.
  Use enumerate to show traktanden. Added url to related items in traktanden.
  [Julian Infanger]

- Related Items in Traktanden are now listed and linked.
  [jinfanger]


1.2.8 (2011-09-06)
------------------

- added task-list
  [jinfanger]


1.2.5 (2011-04-01)
------------------

- Make start and end date required.
  [mathias.leimgruber]

- Auto-fill end date with start date infos.
  [mathias.leimgruber]


1.2.4 (2011-03-29)
------------------

- Fixed list with string and unicode => unicode-error
  [jinfanger]


1.2.3 (2011-02-02)
------------------

- Improve file view (don't show related items twice / remove default
  description)
  [mathias.leimgruber]

- Added missing normalizeString definition.
  [mathias.leimgruber]


1.2.1 (2010-12-22)
------------------

- Only show head_of_meeting if meeting typ ist "meeting"
  [mathias.leimgruber]
