@@ -15,3 +15,4 @@ github_4teamwork = git@github.com:4teamwork/
 ftw.testing = git ${remotes:github_4teamwork}ftw.testing.git
 ftw.pdfgenerator = git ${remotes:github_4teamwork}ftw.pdfgenerator.git
 ftw.calendarwidget = git ${remotes:github_4teamwork}ftw.calendarwidget.git
+ftw.workspace = git ${remotes:github_4teamwork}ftw.workspace.git
